# distributed-linearmodel

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
include/base/: cmds.h  functions.h  string_algo.h  utils.h
include/conf/: config.pb.cc  config.pb.h  config.proto  model_config.h
include/data/: dataloader.h  datawriter.h
include/io/: files.h  line_file_reader.h  shell.h
include/metric/: metric.h
run/: demo.conf  run_local.sh  run_remote.py
src/: ffm_model.h  fm_model.h  lr_model.h  main.cpp  model.h  scheduler.h  server.h
src/conf/: config.pb.cc
tests/: CMakeLists.txt  Makefile
tests/conf/: config_test.cpp  example.conf
tests/io/: io_test.cpp
tests/metric/: metric_test.cpp
